-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 15
-
Component/s: hotspot
-
b08
-
Verified
In file included from /home/shade/trunks/jdk-jdk/build/linux-x86_64-zero-fastdebug/hotspot/variant-zero/gensrc/jvmtifiles/bytecodeInterpreterWithChecks.cpp:3:0:
/home/shade/trunks/jdk-jdk/src/hotspot/share/interpreter/bytecodeInterpreter.cpp: In static member function 'static void BytecodeInterpreter::runWithChecks(interpreterState)':
/home/shade/trunks/jdk-jdk/src/hotspot/share/interpreter/bytecodeInterpreter.cpp:2176:49: error: invalid cast from type 'oop' to type 'HeapWordImpl**'
HeapWord* to_zero = (HeapWord*) result + sizeof(oopDesc) / oopSize;
^~~~~~
/home/shade/trunks/jdk-jdk/src/hotspot/share/interpreter/bytecodeInterpreter.cpp: In static member function 'static void BytecodeInterpreter::runWithChecks(interpreterState)':
/home/shade/trunks/jdk-jdk/src/hotspot/share/interpreter/bytecodeInterpreter.cpp:2176:49: error: invalid cast from type 'oop' to type 'HeapWordImpl**'
HeapWord* to_zero = (HeapWord*) result + sizeof(oopDesc) / oopSize;
^~~~~~
- relates to
-
JDK-8237637 Remove dubious type conversions from oop
-
- Resolved
-