8237847: Zero builds fail after JDK-8237637 (Remove dubious type conversions from oop)

Reviewed-by: dcubed